[package]
name = "upgrade-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.4.0"
inquire = "0.6.2"
regex = "1.10.2"
reqwest = { version="0.11.22", features=["blocking"] }
serde_json = "1.0.107"
